--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,11 @@ spring.h2.console.enabled=true
 # Habilitamos los mensajes sql en el log
 spring.jpa.show-sql=true
 
-
 jwt.secret=otEz3_NK_7-P9C3aGPmTLbHVjDppgI1-vag28lfO8B4vLxBVhHOMS6-IatgGRH8LCs91bswGaEb8EzvJWYW_RQ
-jwt.duration=1
+jwt.duration=14000
 
 # Duracion de 1 dia en minutos
-jwt.refresh.duration=2
+jwt.refresh.duration=200
+
+//desactivado de seguridad
+//security.ignored=/**
