--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,13 @@
 			<artifactId>passay</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
