--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,9 @@ jwt.duration=14000
 # Duracion de 1 dia en minutos
 jwt.refresh.duration=200
 
-//desactivado de seguridad
+//desactivado de seguridadSSSSS
 //security.ignored=/**
 
 
 storage.location=./uploads
+
