--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,11 @@ jwt.duration=100000
 # Duracion de 1 dia en minutos
 jwt.refresh.duration=200000
 
-//desactivado de seguridadSSSSS
-//security.ignored=/**
+#//desactivado de seguridadSSSSS
+#//security.ignored=/**
+
+#OSIV
+#spring.jpa.open-in-view=false
 
 
 storage.location=./uploads
