--- a/gamesforall_flutter/pubspec.yaml
+++ b/gamesforall_flutter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^5.3.0
   http_parser: ^4.0.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +48,7 @@ dev_dependencies:
 
 
 flutter:
-
   uses-material-design: true
 
+  assets:
+    - assets/
