--- a/gamesforall_backend/src/main/resources/application.properties
+++ b/gamesforall_backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=prod
+
 
 spring.datasource.url=jdbc:h2:./db/database
 
@@ -29,4 +31,5 @@ jwt.refresh.duration=200000
 
 
 storage.location=./uploads
+
 
