--- a/gamesforall_backend/src/main/resources/application-dev.properties
+++ b/gamesforall_backend/src/main/resources/application-dev.properties
@@ -1,9 +1,8 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5555/games
+spring.datasource.url=jdbc:h2:./db/database
 
 # Usuario y contrasena de la base de datos
 spring.datasource.username=sa
-spring.datasource.password=1234
+spring.datasource.password=
 
 # Le indicamos a JPA/Hibernate que se encargue de generar el DDL
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -16,15 +15,17 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
 jwt.secret=otEz3_NK_7-P9C3aGPmTLbHVjDppgI1-vag28lfO8B4vLxBVhHOMS6-IatgGRH8LCs91bswGaEb8EzvJWYW_RQ
-jwt.duration=14000
+jwt.duration=100000
 
 # Duracion de 1 dia en minutos
-jwt.refresh.duration=200
+jwt.refresh.duration=200000
 
-//desactivado de seguridadSSSSS
-//security.ignored=/**
+#desactivado de seguridadSSSSS
+#security.ignored=/**
+
+#OSIV
+#spring.jpa.open-in-view=false
 
 
 storage.location=./uploads
 
-spring.jpa.generate-ddl=true
