--- a/gamesforall_backend/src/main/resources/application.properties
+++ b/gamesforall_backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+#spring.profiles.active=prod
 
 
 spring.datasource.url=jdbc:h2:./db/database
@@ -23,8 +23,8 @@ jwt.duration=100000
 # Duracion de 1 dia en minutos
 jwt.refresh.duration=200000
 
-#//desactivado de seguridadSSSSS
-#//security.ignored=/**
+#desactivado de seguridadSSSSS
+#security.ignored=/**
 
 #OSIV
 #spring.jpa.open-in-view=false
